fixed: blurred video more

--- a/crossroads.css
+++ b/crossroads.css
@@ -71,7 +71,7 @@ li {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    filter: blur(5px);
+    filter: blur(20px);
 }
 
 video {
